Fix for button on small screen

--- a/learn21.css
+++ b/learn21.css
@@ -118,6 +118,8 @@ flex-wrap { flex-wrap: wrap; }
 .px4 { padding-left: 4rem; padding-right: 4rem; }
 .py1 { padding-top: .5rem; padding-bottom: .5rem; }
 .py2 { padding-top: 1rem; padding-bottom: 1rem; }
+.py3 { padding-top: 2rem; padding-bottom: 2rem; }
+.py4 { padding-top: 4rem; padding-bottom: 4rem; }
 
 /* typography */
 
